# socrates-nexus

./: CHANGELOG.md  ECOSYSTEM.md  GITHUB_PROJECT_SETUP.md  IMPLEMENTATION_COMPLETE.md  PROJECT_ISSUES.md  PROJECT_SETUP_COMPLETE.md  README.md  ROADMAP.md  ecosystem_plan.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: quality.yml  test.yml
docs/: advanced.md  api-reference.md  architecture.md  comparison.md  function-calling.md  integrations.md  providers.md  quickstart.md  vision.md
examples/: 01_anthropic_basic.py  02_openai_gpt4.py  03_google_gemini.py  04_ollama_local.py  05_streaming.py  06_async_calls.py  07_token_tracking.py  08_error_handling.py  09_provider_fallback.py  12_vision_models.py  13_function_calling.py
src/socrates_nexus/: async_client.py  client.py  models.py  retry.py
src/socrates_nexus/integrations/langchain/: __init__.py  llm.py
src/socrates_nexus/integrations/openclaw/: skill.py
src/socrates_nexus/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py
src/socrates_nexus/utils/: __init__.py  cache.py  images.py
tests/: test_async_client.py  test_cache.py  test_client.py  test_client_integration.py  test_edge_cases.py  test_exceptions.py  test_integrations_langchain.py  test_integrations_openclaw.py  test_retry.py  test_streaming.py  test_vision_and_tools.py
tests/test_providers/: __init__.py  conftest.py  test_anthropic_provider.py  test_base_provider.py  test_google_provider.py  test_ollama_provider.py  test_openai_provider.py
